# simulink-mini

./: .gitignore  CMakeLists.txt  Dockerfile  PROJECT_HANDOFF.md  README.md  Vercel-Link  e2e_test.py
backend/: app.py  requirements.txt  test_api.py
examples/: example_generated_shm_oscillator.cpp
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BlockNode.tsx
frontend/lib/: api.ts
include/: CodeGen.hpp  Graph.hpp  JsonLoader.hpp  PSO.hpp  Scheduler.hpp  Simulation.hpp
python/: bindings.cpp
tests/: broken_algebraic_loop.json  broken_loop_through_pid.json  closed_loop_pid_plant.json  pid_step_response.json  shm_oscillator.json  test_codegen.cpp  test_codegen_pid.cpp  test_pid.cpp  test_pso_tune.cpp  test_scheduler.cpp  test_simulation.cpp  valid_feedback_loop.json
